<resources>
    <string name="app_name">Covid App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="globalText">Global</string>
    <string name="coronaviruscases">Cases:</string>
    <string name="deaths">Deaths:</string>
    <string name="recovered">Recovered:</string>
    <string name="TodayCases">Today:</string>
    <string name="ActiveCases">Active:</string>
    <string name="CriticalText">Critical:</string>
    <string name="globalCoronaCases">Cases</string>
    <string name="globalCoronaDeaths">Deaths</string>
    <string name="globalCoronaRecovery">Recovered</string>
</resources>
